# libstuff

./: LICENSE  README.md
foolib/: CMakeLists.txt  foo.cpp  foo.h
libtester/: CMakeLists.txt  main.cpp  plugin1.cpp  plugin2.cpp
vtabletest/: CMakeLists.txt  main.cpp  pluginclasses.cpp  pluginclasses.h  vtplugin.cpp
